style: 안내페이지 문구 변경

--- a/apps/frontend/src/pages/Therapist/MyPage/TherapistSchedulePage.css
+++ b/apps/frontend/src/pages/Therapist/MyPage/TherapistSchedulePage.css
@@ -452,7 +452,7 @@
 }
 
 .modal-footer .btn-primary {
-    background-color: var(--calendar-selected-day-bg); /* primary 버튼 색상 */
+    background-color: blue; /* primary 버튼 색상 */
     border-color: var(--calendar-selected-day-bg);
 }
 
